--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <!-- 🧾 SİPARİŞ BİLGİLERİ -->
 <div class="order-info">
 
-  <label>Siparişi Giren (Garson / Müşteri)</label>
+  <label>Misafir Adı</label>
   <input
     type="text"
     id="personName"
@@ -43,9 +43,17 @@
     <option>Aile Bölümü 6</option>
   </select>
 
+  <!-- 📝 SİPARİŞ NOTU (YENİ) -->
+  <label>Sipariş Notu (İsteğe Bağlı)</label>
+  <textarea
+    id="orderNote"
+    placeholder="Örn: Lahmacun acısız, köfte paket olsun"
+    rows="3"
+  ></textarea>
+
 </div>
 
-<!-- 🔴 MENÜ (ÇOK KRİTİK) -->
+<!-- 🔴 MENÜ -->
 <div id="menu"></div>
 
 <h2>🤍 Destek Ol</h2>
@@ -67,13 +75,14 @@
 
 <!-- 🔥 GOOGLE SHEETS POST FORM -->
 <form id="orderForm"
-  action="https://script.google.com/macros/s/AKfycbxnoB7akQvj1BvvNrODddu1CDtRpzGKQ1Z9pBh05O2wWL1hyyHv6JzyXzqQkSiuCwyE/exec"
+  action="https://script.google.com/macros/s/AKfycbwPzhYvcfynIUpO78-VTljsbpQiticA6YglusYTI6_7ycL9AjWs1xC7d9QOraheG2yJ/exec"
   method="POST"
   target="hidden_iframe"
   style="display:none;">
 
   <input name="table" id="f_table">
   <input name="foods" id="f_foods">
+  <input name="note" id="f_note">
   <input name="person" id="f_person">
   <input name="support" id="f_support">
   <input name="total" id="f_total">
