--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <!-- 🔥 GOOGLE SHEETS FORM -->
 <form
   id="orderForm"
-  action="https://script.google.com/macros/s/AKfycbwPzhYvcfynIUpO78-VTljsbpQiticA6YglusYTI6_7ycL9AjWs1xC7d9QOraheG2yJ/exec"
+  action="https://script.google.com/macros/s/AKfycbza7nK-W_YqEPHeLyu30MfuouzvlgGFRdz9a8Sll9MmHU4V4dmdJCiIgY1wkwtPlmGf/exec"
   method="POST"
   target="hidden_iframe"
   style="display:none;"
@@ -64,6 +64,8 @@
   <input name="foods" id="f_foods">
   <input name="note" id="f_note">
   <input name="total" id="f_total">
+  <input name="items" id="f_items">
+
 </form>
 
 <iframe name="hidden_iframe" style="display:none;"></iframe>
