--- a/index.html
+++ b/index.html
@@ -25,16 +25,21 @@
     <option>Kış Bahçesi 3</option>
     <option>Kış Bahçesi 4</option>
     <option>Kış Bahçesi 5</option>
-    <option>Şark Sofrası 1</option>
-    <option>Şark Sofrası 2</option>
-    <option>Şark Sofrası 3</option>
-    <option>Şark Sofrası 4</option>
-    <option>Aile Bölümü 1</option>
-    <option>Aile Bölümü 2</option>
-    <option>Aile Bölümü 3</option>
-    <option>Aile Bölümü 4</option>
-    <option>Aile Bölümü 5</option>
-    <option>Aile Bölümü 6</option>
+    <option>Kış Bahçesi 6</option>
+    <option>Kış Bahçesi 7</option>
+    <option>Kış Bahçesi 8</option>
+    <option>Mescid 9</option>
+    <option>Mescid 10</option>
+    <option>Mescid 11</option>
+    <option>Mescid 12</option>
+    <option>Mescid 13</option>
+    <option>Mescid 14</option>
+    <option>Mescid 15</option>
+    <option>Teras 16</option>
+    <option>Teras 17</option>
+    <option>Teras 18</option>
+    <option>Teras 19</option>
+    <option>Teras 20</option>
   </select>
 
   <label>Sipariş Notu</label>
