--- a/index.html
+++ b/index.html
@@ -57,7 +57,11 @@
 <p id="msg"></p>
 
 <!-- 🔥 GOOGLE SHEETS FORM -->
-
+<form
+  id="orderForm"
+  action="https://script.google.com/macros/s/AKfycbza7nK-W_YqEPHeLyu30MfuouzvlgGFRdz9a8Sll9MmHU4V4dmdJCiIgY1wkwtPlmGf/exec"
+  method="POST"
+  target="hidden_iframe"
   style="display:none;"
 >
   <input name="table" id="f_table">
