--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <header class="header">
   <h1>Sultanahmet Sofrası</h1>
-  <p class="sub">QR Menü & Sipariş •</p>
+  <p class="sub">QR Menü & Sipariş</p>
 </header>
 
 <div class="order-info">
@@ -55,25 +55,6 @@
 </div>
 
 <p id="msg"></p>
-
-<!-- 🔥 GOOGLE SHEETS FORM -->
-<form
-  id="orderForm"
-  action="https://script.google.com/macros/s/AKfycbza7nK-W_YqEPHeLyu30MfuouzvlgGFRdz9a8Sll9MmHU4V4dmdJCiIgY1wkwtPlmGf/exec"
-  method="POST"
-  target="hidden_iframe"
-  style="display:none;"
->
-  <input name="table" id="f_table">
-  <input name="person" id="f_person">
-  <input name="foods" id="f_foods">
-  <input name="note" id="f_note">
-  <input name="total" id="f_total">
-  <input name="items" id="f_items">
-
-</form>
-
-<iframe name="hidden_iframe" style="display:none;"></iframe>
 
 <script src="script.js"></script>
 </body>
